--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="POST"></form>
+    <div>
+        <form action="/users/login" method="POST">
+        <label for="">Nombre</label>
+        <input type="text" name="nombre" id="nombre">
+        <label for="">Apellido</label>
+        <input type="text" name="apellido" id="apellido">
+        <label for="">Email</label>
+        <input type="email" name="email" id="email">
+        <label for="">Password</label>
+        <input type="password" name="password" id="password">
+        <button type="submit">LOGIN</button>
+        
+        </form>
+    </div>  
 </body>
 </html>
